@@ -1,3 +1,8 @@
+2015-05-19 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* support/regression/tests/bug-1918.c:
+	  Add a new test case.
+
 2015-05-17 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* doc/clean.mk: remove *.eps
